# great-risks

./: CMakeLists.txt
scripts/: agent_game.cc  agent_game.py  agent_game_reduced.cc  agent_game_reduced.py  play_game.py  test.cc  tournament.cc
src/great_risks/: agent.hh  greedy_agent.cc  greedy_agent.hh  greedy_agent_reduced.cc  greedy_agent_reduced.hh  mcts_agent_greedy.cc  mcts_agent_greedy.hh  mcts_agent_random.cc  mcts_agent_random.hh  mcts_agent_reduced.cc  mcts_agent_reduced.hh  random_agent.cc  random_agent.hh  reduced_game.cc  reduced_game.hh  simulator.cc  simulator.hh
src/turbozero/: complex_game_def.py  game_def.py  test.py  test_draw.py  test_game.py  train.py
src/turbozero/core/training/: train.py
